Updated the header : added a log, added some content

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <ul>
-            <li>Logo image</li>
+            <li><img src="images/duck-logo.png" alt="logo representing a duck" class="header-logo"></li>
             <div id="header-links">
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
+                <li>Products</li>
+                <li>Latest ideas</li>
+                <li>About us</li>
             </div>
         </ul>
     </header>
