Added new content to the website.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
             </div>
         </ul>
     </header>
+    <section id="welcome">
+        <div id="welcome-content">
+            <h1>This website is awesome</h1>
+            <p>This website aims to help duck lovers find duck-related products in order to buy them, for themselves or to gift to their love ones.</p>
+            <button>Sign up</button>
+        </div>
+        <p class="img">blabla</p>
+    </section>
+    <div>
+
+    </div>
     <div>
 
     </div>
