Added the image of a duck

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>This website aims to help duck lovers find duck-related products in order to buy them, for themselves or to gift to their love ones.</p>
             <button>Sign up</button>
         </div>
-        <p class="img">blabla</p>
+        <img src="images/duck-in-grass.jpg" alt="Picture of a duck in nature.">
     </section>
     <div>
 
